# music_recommendation

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: id-mapping.md
docs/adr/: 001-mbid-as-shared-key.md
notebooks/: explore_listens.ipynb
scripts/: create-playlist.sh
src/music_recommendation/: dataloader.py
tests/: conftest.py  test_dataloader.py
