[project]
name = "music-recommendation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_recommendation"]

[tool.pytest.ini_options]
markers = ["integration: tests that require downloaded data (deselect with '-m \"not integration\"')"]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]
